force-app/main/default/objects/Email_Quote_Recipients_Default__c/Email_Quote_Recipients_Default__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>For CS Italy</description>
    <label>Email Quote Recipients Default</label>
</CustomObject>