force-app/main/default/objects/Email_Quote_Recipients_Default__c/fields/BU_Name__c.field-meta.xml
<CustomField>
    <fullName>BU_Name__c</fullName>
    <label>BU Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>