force-app/main/default/objects/Email_Quote_Recipients_Default__c/fields/Data_Order__c.field-meta.xml
<CustomField>
    <fullName>Data_Order__c</fullName>
    <label>Data Order</label>
    <length>10</length>
    <type>Text</type>
</CustomField>