force-app/main/default/objects/Email_Quote_Recipients_Default__c/fields/User_or_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>User_or_Contact_ID__c</fullName>
    <label>User or Contact ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>